--- a/memo/1/1.仮実装.md
+++ b/memo/1/1.仮実装.md
@@ -6,5 +6,8 @@
 
 - $5+10CHF=$10(レートが 2:1 の場合)
 - $5 * 2=$10
+- amountをprivateにする
+- Dollarの副作用どうする？
+- Moneyの丸め処理どうする？
 
 APIから初めて逆向きに作業していくほうが、複雑で見苦しい現実的なプログラムを最初から書くよりは良い。
