--- a/memo/1/1.仮実装.md
+++ b/memo/1/1.仮実装.md
@@ -4,10 +4,19 @@
 
 ## TODOリスト
 
-- $5+10CHF=$10(レートが 2:1 の場合)
-- $5 * 2=$10
-- amountをprivateにする
-- Dollarの副作用どうする？
-- Moneyの丸め処理どうする？
+- [ ] $5+10CHF=$10(レートが 2:1 の場合)
+- [x] $5 * 2=$10
+- [ ] amountをprivateにする
+- [ ] Dollarの副作用どうする？
+- [ ] Moneyの丸め処理どうする？
 
 APIから初めて逆向きに作業していくほうが、複雑で見苦しい現実的なプログラムを最初から書くよりは良い。
+
+## やったこと
+
+- テストのTODO書いた
+- どうなったら嬉しいか小さいテストコードで表現
+- 空実装を使ってコンパイラを通した
+- 大罪を犯しながらテスト
+- 動くコードをだんだん共通化、ベタ書きの値を変数へ置き換え
+- TODOの項目に追加し、一度に多くのものを相手にしないい
