コメント追加

--- a/memo/1/2.明白な実装.md
+++ b/memo/1/2.明白な実装.md
@@ -6,7 +6,6 @@
 
 目指すのは動作するきれいなコード。アーキテクチャ駆動とは正反対。
 
-
 ## TODOリスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
@@ -14,3 +13,15 @@
 - [ ] amountをprivateにする
 - [x] Dollarの副作用どうする？
 - [ ] Moneyの丸め処理どうする？
+
+
+TDDを行うときは２つの実装モード間を揺れ動く。
+仮実装: コードでまずベタ書きの値を使い、実装を進めるにしたがって、徐々に置き換えていく。
+明白な実装: すぐに頭の中の実装に落とす。
+
+
+## やったこと
+
+- 設計の問題点（今回は副作用）をテストコードに写し取り、その問題点のせいでテストが失敗するのを確認
+- 仮実装でさっさとコンパイルを通した。
+- 正しいと思える実装をすぐに行って、テストを通した。
