--- a/memo/1/4.意図を語るテスト.md
+++ b/memo/1/4.意図を語るテスト.md
@@ -4,7 +4,7 @@
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
 - [x] $5 * 2=$10
-- [ ] amountをprivateにする
+- [x] amountをprivateにする
 - [x] Dollarの副作用どうする？
 - [ ] Moneyの丸め処理どうする？
 - [x] equals()
@@ -20,3 +20,13 @@
   - 一時変数productは用をなさなくなったので、inline化する。
 
 上記で意図を語るようになった。
+
+amountフィールドを使うのはDollarクラス自身だけになったので、privateにできる。した。
+
+
+## やったこと
+
+- 作成したばかりの昨日を使って、テストを改善
+- そもそも正しくけんしょうできていないテストが２つあったらお手上げ
+- そのようなリスクを受け入れ先に進む
+- テスト対象オブジェクトの新しい機能を使い、テストコードとプロダクトコードの間の結合度を下げた
