フランのequalsメソッドもMoneyに移動した

--- a/memo/1/6.テスト不足に気づいたら.md
+++ b/memo/1/6.テスト不足に気づいたら.md
@@ -22,3 +22,19 @@
 -> これは全くコードの削減につながらなかった。
 (案2) 2つのクラスの共通親クラスを作成する。
 -> 時間かかるけどうまくいきそう。
+
+やっているうちにFrancには等価性比較のテストしていないことに気づく。書く。
+
+テストが十分じゃない場合、テストによって守られていないリファクタリングを行わざるを得なくなる。
+*リファクタリング中にミスが有っても通り続けるかもしれない。*
+どうするべきか？
+-> あればよかっと思うテストを書く。書かなければリファクタリングの過程でいつか壊れる。
+リファクタリングがないと設計はくさっていく。
+
+とりあえずコピペでフラン用のテストを追加することで、フランも継承できる。
+
+## やったこと
+
+- DollarからMoneyへ段階的にメソッド移動
+- Francもサブクラス化
+- equlasメソッドの差異をなくしてサブクラス側の実装を削除
