--- a/memo/1/6.テスト不足に気づいたら.md
+++ b/memo/1/6.テスト不足に気づいたら.md
@@ -38,3 +38,21 @@
 - DollarからMoneyへ段階的にメソッド移動
 - Francもサブクラス化
 - equlasメソッドの差異をなくしてサブクラス側の実装を削除
+
+
+## TODOリスト
+
+- [ ] $5+10CHF=$10(レートが 2:1 の場合)
+- [x] $5 * 2=$10
+- [x] amountをprivateにする
+- [x] Dollarの副作用どうする？
+- [ ] Moneyの丸め処理どうする？
+- [x] equals()
+- [ ] hashCode()
+- [ ] nullとの等価性比較
+- [ ] 他のオブジェクトの等価性比較
+- [x] 5CHF * 2 = 10CHF
+- [ ] DollarとFrancの重複
+- [x] equalsの一般化
+- [ ] timesの一般化
+- [ ] DollarとFrancを比較する
