--- a/memo/1/9.歩幅の調整.md
+++ b/memo/1/9.歩幅の調整.md
@@ -21,3 +21,28 @@
 
 
 TDDを行う際には常に歩幅の微調整を行う。窮屈なら大きく。不安を感じるなら小さく。正しい歩幅なんて存在しない。
+
+## やったこと
+
+- 大きめの設計変更にのめり込みそうになったので、その前にの手間にある小さな変更に着手
+- 差異を呼び出し側（FactoryMethodがわ）に移動することで２つのサブクラスのコンストラクタを近づけていった
+- リファクタリングの途中ですこし寄り道して、timesメソッドの中でFactoryMethodを使うように変更した。
+- Francに行ったリファクタリングをDollarにも同様に。歩幅大きめで一気に適用。
+## TODOリスト
+
+- [ ] $5+10CHF=$10(レートが 2:1 の場合)
+- [x] $5 * 2=$10
+- [x] amountをprivateにする
+- [x] Dollarの副作用どうする？
+- [ ] Moneyの丸め処理どうする？
+- [x] equals()
+- [ ] hashCode()
+- [ ] nullとの等価性比較
+- [ ] 他のオブジェクトの等価性比較
+- [x] 5CHF * 2 = 10CHF
+- [ ] DollarとFrancの重複
+- [x] equalsの一般化
+- [ ] timesの一般化
+- [x] DollarとFrancを比較する
+- [x] 通貨の概念
+- [ ] フランの掛け算テストを削除する？
