--- a/memo/1/12.設計とメタファー.md
+++ b/memo/1/12.設計とメタファー.md
@@ -1,21 +1,19 @@
 # 設計とメタファー
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
 - [ ] $5 + $5 = $10
 
+足し算的な最終的なストーリーを描けていないので、TODO に追加。
 
-足し算的な最終的なストーリーを描けていないので、TODOに追加。
+通貨間の為替レートを扱えて、かつ計算は計算のように見える方法を模索したい。オブジェクトたちに頼ろう。Imposter パターン。
 
-通貨間の為替レートを扱えて、かつ計算は計算のように見える方法を模索したい。オブジェクトたちに頼ろう。Imposterパターン。
-
-Moneyのように振る舞うが、2つの合計を表現するようなオブジェクトをこれからつくる。様々な通貨がはいった財布のイメージ。
+Money のように振る舞うが、2 つの合計を表現するようなオブジェクトをこれからつくる。様々な通貨がはいった財布のイメージ。
 
 「式」というメタファー
 
-Moneyとは式の最小構成要素であり、さまざまな操作の結果はExpressionオブジェクトの形になる。
-
+Money とは式の最小構成要素であり、さまざまな操作の結果は Expression オブジェクトの形になる。
 
 ## やったこと
 
