--- a/memo/1/2.明白な実装.md
+++ b/memo/1/2.明白な実装.md
@@ -6,19 +6,17 @@
 
 目指すのは動作するきれいなコード。アーキテクチャ駆動とは正反対。
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [ ] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [ ] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 
-
-TDDを行うときは２つの実装モード間を揺れ動く。
+TDD を行うときは２つの実装モード間を揺れ動く。
 仮実装: コードでまずベタ書きの値を使い、実装を進めるにしたがって、徐々に置き換えていく。
 明白な実装: すぐに頭の中の実装に落とす。
-
 
 ## やったこと
 
