--- a/memo/1/6.テスト不足に気づいたら.md
+++ b/memo/1/6.テスト不足に気づいたら.md
@@ -1,32 +1,32 @@
 # テスト不足に気づいたら
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [ ] equalsの一般化
-- [ ] timesの一般化
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [ ] equals の一般化
+- [ ] times の一般化
 
 一個前の章ではクラスをコピペすることでテストを通した。
 そのコピペコードをキレイにする段階。
-(案1) 片方のクラスがもう片方を継承する。
+(案 1) 片方のクラスがもう片方を継承する。
 -> これは全くコードの削減につながらなかった。
-(案2) 2つのクラスの共通親クラスを作成する。
+(案 2) 2 つのクラスの共通親クラスを作成する。
 -> 時間かかるけどうまくいきそう。
 
-やっているうちにFrancには等価性比較のテストしていないことに気づく。書く。
+やっているうちに Franc には等価性比較のテストしていないことに気づく。書く。
 
 テストが十分じゃない場合、テストによって守られていないリファクタリングを行わざるを得なくなる。
-*リファクタリング中にミスが有っても通り続けるかもしれない。*
+_リファクタリング中にミスが有っても通り続けるかもしれない。_
 どうするべきか？
 -> あればよかっと思うテストを書く。書かなければリファクタリングの過程でいつか壊れる。
 リファクタリングがないと設計はくさっていく。
@@ -35,24 +35,23 @@
 
 ## やったこと
 
-- DollarからMoneyへ段階的にメソッド移動
-- Francもサブクラス化
-- equlasメソッドの差異をなくしてサブクラス側の実装を削除
+- Dollar から Money へ段階的にメソッド移動
+- Franc もサブクラス化
+- equlas メソッドの差異をなくしてサブクラス側の実装を削除
 
-
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [x] equalsの一般化
-- [ ] timesの一般化
-- [ ] DollarとFrancを比較する
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [x] equals の一般化
+- [ ] times の一般化
+- [ ] Dollar と Franc を比較する
