--- a/memo/1/7.疑念をテストに翻訳する.md
+++ b/memo/1/7.疑念をテストに翻訳する.md
@@ -1,53 +1,51 @@
 # 疑念をテストに翻訳
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [x] equalsの一般化
-- [ ] timesの一般化
-- [ ] DollarとFrancを比較する
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [x] equals の一般化
+- [ ] times の一般化
+- [ ] Dollar と Franc を比較する
 
-最後のTODOを実際に比較するとどうなるのかテストを書く。
+最後の TODO を実際に比較するとどうなるのかテストを書く。
 
 ```ts
 expect(new Franc(5).equals(new Dollar(5))).toBeFalsy();
 ```
 
 -> 失敗する。ドルとフランが等しくなっている。。。
-等価性比較を行うにはDollarとFrancを比較していないか調べる必要がる。
-かんたんに調べるには、2つのオブジェクトクラスを調べて2つのMoneyオブジェクトの金額と実クラスがともに等しいときのみtrueにすればよさそう
+等価性比較を行うには Dollar と Franc を比較していないか調べる必要がる。
+かんたんに調べるには、2 つのオブジェクトクラスを調べて 2 つの Money オブジェクトの金額と実クラスがともに等しいときのみ true にすればよさそう
 
 不吉な匂いはするけど、まだ通貨の概念がないので、いったんこのままいく
 
-
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [x] equalsの一般化
-- [ ] timesの一般化
-- [x] DollarとFrancを比較する
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [x] equals の一般化
+- [ ] times の一般化
+- [x] Dollar と Franc を比較する
 - [ ] 通貨の概念
-
 
 ## やったこと
 
