--- a/memo/1/8.実装を隠す.md
+++ b/memo/1/8.実装を隠す.md
@@ -1,44 +1,41 @@
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [x] equalsの一般化
-- [ ] timesの一般化
-- [x] DollarとFrancを比較する
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [x] equals の一般化
+- [ ] times の一般化
+- [x] Dollar と Franc を比較する
 - [ ] 通貨の概念
 - [ ] フランの掛け算テストを削除する？
 
-
-timesメソッドは似ている。
+times メソッドは似ている。
 小さく一歩ずつサブクラスへの参照箇所を減らし、サブクラスを消せる状態に近づける。
-Dollarを返すFactoryMethodをMoneyに定義する。
+Dollar を返す FactoryMethod を Money に定義する。
 
-dollarメソッドの実装はDollarインスタンスを作成して返せば良い。
+dollar メソッドの実装は Dollar インスタンスを作成して返せば良い。
 
-下記エラーが出たので1ファイルにまとめた。
+下記エラーが出たので 1 ファイルにまとめた。
 モジュール同士の循環参照。
 
 ```text
 TypeError: Object prototype may only be an Object or null: undefined
 ```
 
-
-利用側のコードからDollarというサブクラスを使っている箇所が消え、いい状態になった。
+利用側のコードから Dollar というサブクラスを使っている箇所が消え、いい状態になった。
 テストからサブクラスの存在が切り離された結果、既存のコードに影響を及ばさずに継承構造を変更する権利を手に入れた。
-
 
 ## やったこと
 
-- 重複を除去できるよう状態に一歩近づくために、2つのtimesメソッドのシグネチャを合わせた
+- 重複を除去できるよう状態に一歩近づくために、2 つの times メソッドのシグネチャを合わせた
 - メソッド宣言だけは親クラスに移動
-- FactoryMethodパターンで、テストコードから２つのサブクラスの存在を隠した
-- その結果、テストの冗長に気づいたけどTODOに入れておいた
+- FactoryMethod パターンで、テストコードから２つのサブクラスの存在を隠した
+- その結果、テストの冗長に気づいたけど TODO に入れておいた
