--- a/memo/1/10.テストにきいてみる.md
+++ b/memo/1/10.テストにきいてみる.md
@@ -1,49 +1,48 @@
 # テストにきいてみる
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [x] equalsの一般化
-- [ ] *timesの一般化*
-- [x] DollarとFrancを比較する
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [x] equals の一般化
+- [ ] _times の一般化_
+- [x] Dollar と Franc を比較する
 - [ ] 通貨の概念
 
-現時点で2つのサブクラスのtimeseメソッドは似ているけど完全一致ではない。
+現時点で 2 つのサブクラスの timese メソッドは似ているけど完全一致ではない。
 一致させるために後戻りすることもある。
-FactoryMethodをインライン化してみる。
+FactoryMethod をインライン化してみる。
 
 ## やったこと
 
-- サブクラスのtimesメソッドの実装のさいを無くすために、メソッド呼び出しをインライン化し、ベタ書きの値を変数に置き換えた
+- サブクラスの times メソッドの実装のさいを無くすために、メソッド呼び出しをインライン化し、ベタ書きの値を変数に置き換えた
 - デバッグ用途の、toString()をテストを書かずに実装
-- Francの代わりにMoneyを返す変更を試み、動くか動かないかはテストに聞く
+- Franc の代わりに Money を返す変更を試み、動くか動かないかはテストに聞く
 - 実験的な変更を巻き戻し、もういっこテスト書いた
 
-
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [x] equalsの一般化
-- [x] *timesの一般化*
-- [x] DollarとFrancを比較する
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [x] equals の一般化
+- [x] _times の一般化_
+- [x] Dollar と Franc を比較する
 - [ ] 通貨の概念
