--- a/memo/1/11.不要になったら消す.md
+++ b/memo/1/11.不要になったら消す.md
@@ -1,30 +1,28 @@
 # 不要になったら消す
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [x] equalsの一般化
-- [x] *timesの一般化*
-- [x] DollarとFrancを比較する
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [x] equals の一般化
+- [x] _times の一般化_
+- [x] Dollar と Franc を比較する
 - [ ] 通貨の概念
 
-
-2つのサブクラスにはコンストラクタしかない。コンストラクタのみのサブクラスを残しておく理由はないので消したい。
+2 つのサブクラスにはコンストラクタしかない。コンストラクタのみのサブクラスを残しておく理由はないので消したい。
 
 不要になったテストコードも削除する
-
 
 ## やったこと
 
 - サブクラスの仕事を減らし続け、消した
-- サブクラス削除前の構造ではいみがあったけど、削除後は冗長になってしまうor不要なテストコード消した
+- サブクラス削除前の構造ではいみがあったけど、削除後は冗長になってしまう or 不要なテストコード消した
