--- a/memo/1/4.意図を語るテスト.md
+++ b/memo/1/4.意図を語るテスト.md
@@ -1,28 +1,26 @@
 # 意図を語るテスト
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-
 
 これまで書いたテストの意図が分かりづらい。
 
 - 掛け算のテスト
-  - Dollar同士を直接比較する。
-  - 一時変数productは用をなさなくなったので、inline化する。
+  - Dollar 同士を直接比較する。
+  - 一時変数 product は用をなさなくなったので、inline 化する。
 
 上記で意図を語るようになった。
 
-amountフィールドを使うのはDollarクラス自身だけになったので、privateにできる。した。
-
+amount フィールドを使うのは Dollar クラス自身だけになったので、private にできる。した。
 
 ## やったこと
 
