--- a/memo/1/5.原則をあえて破るとき.md
+++ b/memo/1/5.原則をあえて破るとき.md
@@ -1,46 +1,47 @@
 # 原則をあえて破るとき
 
-## TODOリスト
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
 
-一番上の面白そうな項目やってみたいけど、着手まで至っていない。なぜかというと、すぐにコードが実装できるような *テストを書ける自信がないから。*
+一番上の面白そうな項目やってみたいけど、着手まで至っていない。なぜかというと、すぐにコードが実装できるような _テストを書ける自信がないから。_
 
 何が必要なのか？
--> DollarのようなFrancオブジェクト(作成できると異通貨のテストができそう。)
+-> Dollar のような Franc オブジェクト(作成できると異通貨のテストができそう。)
 
-シンプルにコピペ(DollarからFranc)して再利用するのは抽象化の敗北。きれいな設計を殺す。サイクルにはフェーズがある。
+シンプルにコピペ(Dollar から Franc)して再利用するのは抽象化の敗北。きれいな設計を殺す。サイクルにはフェーズがある。
 
 テスト書く -> コンパイラ通す -> テストで失敗を確認 -> テスト通す -> 重複排除
 
-最初の3つはなるべく早く通過すること。
-新機能がどの状態にあるかわかるところまでいきたい。そのためには罪を犯してOK。
+最初の 3 つはなるべく早く通過すること。
+新機能がどの状態にあるかわかるところまでいきたい。そのためには罪を犯して OK。
 なぜなら速度が設計よりも重要だから。あと重複排除するフェーズがある。そこで正しい設計をすればいいことっぽい。
-## TODOリスト
+
+## TODO リスト
 
 - [ ] $5+10CHF=$10(レートが 2:1 の場合)
-- [x] $5 * 2=$10
-- [x] amountをprivateにする
-- [x] Dollarの副作用どうする？
-- [ ] Moneyの丸め処理どうする？
+- [x] $5 \* 2=$10
+- [x] amount を private にする
+- [x] Dollar の副作用どうする？
+- [ ] Money の丸め処理どうする？
 - [x] equals()
 - [ ] hashCode()
-- [ ] nullとの等価性比較
+- [ ] null との等価性比較
 - [ ] 他のオブジェクトの等価性比較
-- [x] 5CHF * 2 = 10CHF
-- [ ] DollarとFrancの重複
-- [ ] equalsの一般化
-- [ ] timesの一般化
+- [x] 5CHF \* 2 = 10CHF
+- [ ] Dollar と Franc の重複
+- [ ] equals の一般化
+- [ ] times の一般化
 
-Francの掛け算テストはできたけど、
+Franc の掛け算テストはできたけど、
 重複が大量発生している。
 
 ## やったこと
@@ -48,4 +49,4 @@ Francの掛け算テストはできたけど、
 - 大きいテストに立ち向かうのはまだ難しそうだったので、次の一歩のための小さめなテストを出す
 - とりあえず、コピペでテストを作成
 - そしてとりあえずコピペでクラスを作成しテストを通した
-- 重複は排除しないといけないのでTODOに追加
+- 重複は排除しないといけないので TODO に追加
