--- a/memo/1/12.設計とメタファー.md
+++ b/memo/1/12.設計とメタファー.md
@@ -9,11 +9,14 @@
 
 通貨間の為替レートを扱えて、かつ計算は計算のように見える方法を模索したい。オブジェクトたちに頼ろう。Imposter パターン。
 
+*自信を与えてくれるテストときちんと手入れされたコードはひらめきへの備えであり、ひらめいたときに、それを具現化するための備えでもある。*
+
 Money のように振る舞うが、2 つの合計を表現するようなオブジェクトをこれからつくる。様々な通貨がはいった財布のイメージ。
 
-「式」というメタファー
-
+「式」というメタファー。四季とは例えば`(2 + 3) * 5`のようなもので、今回は`($2 + 3CHF) * 5`など。式メタファーにおいて、
 Money とは式の最小構成要素であり、さまざまな操作の結果は Expression オブジェクトの形になる。
+
+reducedについてBankに任せることにしたのは、通貨を換算するのは式ではなく銀行の責務であるべきだから。
 
 ## やったこと
 
