--- a/memo/1/12.設計とメタファー.md
+++ b/memo/1/12.設計とメタファー.md
@@ -13,8 +13,11 @@
 
 Money のように振る舞うが、2 つの合計を表現するようなオブジェクトをこれからつくる。様々な通貨がはいった財布のイメージ。
 
-「式」というメタファー。四季とは例えば`(2 + 3) * 5`のようなもので、今回は`($2 + 3CHF) * 5`など。式メタファーにおいて、
-Money とは式の最小構成要素であり、さまざまな操作の結果は Expression オブジェクトの形になる。
+Expression: 式
+「式」というメタファー。式とは例えば`(2 + 3) * 5`のようなもので、今回は`($2 + 3CHF) * 5`など。式メタファーにおいて、
+Money とは式の最小構成要素であり、さまざまな操作の結果は Expression(式) オブジェクトの形になる。
+
+換算の責務をExpressionに移動
 
 reducedについてBankに任せることにしたのは、通貨を換算するのは式ではなく銀行の責務であるべきだから。
 
