reduceメソッドに渡す引数がMoneyのテスト

--- a/memo/1/13.実装を導くテスト.md
+++ b/memo/1/13.実装を導くテスト.md
@@ -12,8 +12,43 @@
 
 - [ ] $5 + 10CHF = $10(レートが 2:1 の場合)
 - [ ] *$5 + $5 = $10*
-- [x] $5 + $5がMoneyを返す
+- [ ] $5 + $5がMoneyを返す
+
+Moneyのplus()にはMoneyの代わりにExpressionのインスタンス、この場合Sumクラスのインスタンスを返す必要がある。
+plusメソッドははSumクラスのインスタンスを返すことのテストを追加。
+
 
 augend: 被加算数（足し算で足される方の数）
 addend: 加算数（足し算で足す方の数）
 
+## TODO リスト
+
+- [ ] $5 + 10CHF = $10(レートが 2:1 の場合)
+- [ ] *$5 + $5 = $10*
+- [ ] $5 + $5がMoneyを返す
+- [ ] Bank.reduce(Money)
+
+やるべきなのはBankのreduce()に渡すExpressionがMoneyインスタンスの場合のテスト。
+
+
+Expressionにreduce(to: string)を引き上げることで、Bank.reduce()内にあったキャストとかinstanceofを排除できた。
+
+
+
+## TODO リスト
+
+- [ ] $5 + 10CHF = $10(レートが 2:1 の場合)
+- [ ] *$5 + $5 = $10*
+- [ ] $5 + $5がMoneyを返す
+- [x] Bank.reduce(Money)
+- [ ] Moneyを変換して換算を行う
+- [ ] Reduce(Bank, String)
+
+
+## やったこと
+
+- 実装の着想を得るために更に先に進むことにした
+- 後に必要になりそうなオブジェクトSumの作成を促すテストを書く
+- Sumのコンストラクタを速やかに実装
+- キャストを使って1箇所で実装したあと、 *テストが通るまま* あるべき場所にコードを移す
+- ポリモーフィズムを使ってクラスチェックを置き換えた
