Sumのtimes()のテスト

--- a/memo/1/16.将来の読み手を考えたテスト.md
+++ b/memo/1/16.将来の読み手を考えたテスト.md
@@ -3,13 +3,13 @@
 
 ## TODO リスト
 
-- [x] *$5 + 10CHF = $10(レートが 2:1 の場合)*
+- [x] $5 + 10CHF = $10(レートが 2:1 の場合)
 - [x] $5 + $5 = $10
-- [ ] $5 + $5がMoneyを返す
+- [x] $5 + $5がMoneyを返す
 - [x] Bank.reduce(Money)
 - [x] Moneyを変換して換算を行う
 - [x] Reduce(Bank, String)
-- [x] *Sum.plus*
-- [ ] Expression.times
+- [x] Sum.plus
+- [x] **Expression.times**
 
 テストを書くのは、考えていることを将来の仲間に伝える役割も担ってほしいから。
